# multi-eGO

./: .gitignore  .gitmodules  .greta.py.swp  CB_6 CB_11  CITATION.cff  Ensemble.py  GRETA.py  GRETA2.py  MD.ipynb  Multi_eGO_Ensemble.py  N_1-interactions.txt  README.md  TYR_1_5  TYR_1_5_1  acid_full  amylin_chain.txt  atomtypes_definitions.py  awk  b2m_chains  bond  bonds.txt  chain  chain_names  chains  clustering_analysis.ipynb  codecheck.sh  comm  compare_contact_histo.py  del_full  diff  distance_analysis.ipynb  environment.yml  example.txt  fibril_fl_long_chains  fix pairs  functions.py  greta.py  gromologist_test.py  gyration.ipynb  log  (+69 more)
FF_TTR/: fibrillone-noh.top  gromos-top-peptide.top  model_top-ff.top  top_pep.top
FF_greta_analysis/: TTR_merge_pairs_list_c5.5_e3.txt  TTR_native_pairs_list_c5.5_e3.txt
FF_greta_analysis_ABeta/: ABeta_fibril_pairs_list_c5.5_e2.txt  ABeta_merge_pairs_list_c5.5_e2.txt  ABeta_native_pairs_list_c5.5_e2.txt
FF_greta_analysis_ALA_DP/: ALA_DP_fibril_pairs_list_c5.5_e0.txt  ALA_DP_fibril_pairs_list_c5.5_e2.txt  ALA_DP_merge_pairs_list_c5.5_e0.txt  ALA_DP_merge_pairs_list_c5.5_e2.txt  ALA_DP_native_pairs_list_c5.5_e2.txt
FF_greta_analysis_Amylin/: Amylin_fibril_pairs_list_c5.5_e1.txt  Amylin_fibril_pairs_list_c5.5_e2.txt  Amylin_fibril_pairs_list_c5.5_e3.txt  Amylin_merge_pairs_list_c5.5_e1.txt  Amylin_merge_pairs_list_c5.5_e2.txt  Amylin_merge_pairs_list_c5.5_e3.txt  Amylin_native_pairs_list_c5.5_e1.txt  Amylin_native_pairs_list_c5.5_e2.txt  Amylin_native_pairs_list_c5.5_e3.txt
FF_greta_analysis_B2m/: B2m_fibril_pairs_list_c5.5_e2.txt  B2m_fibril_pairs_list_c5.5_e3.txt  B2m_merge_pairs_list_c5.5_e2.txt  B2m_merge_pairs_list_c5.5_e3.txt  B2m_native_pairs_list_c5.5_e2.txt  B2m_native_pairs_list_c5.5_e3.txt
FF_greta_analysis_GLY_DP/: GLY_DP_merge_pairs_list_c5.5_e2.txt  GLY_DP_native_pairs_list_c5.5_e2.txt
FF_greta_analysis_PRO_DP/: PRO_DP_merge_pairs_list_c5.5_e2.txt  PRO_DP_native_pairs_list_c5.5_e2.txt
FF_greta_analysis_TTR/: TTR_fibril_pairs_list_c4.8_e2.txt  TTR_fibril_pairs_list_c5.1_e2.txt  TTR_fibril_pairs_list_c5.5_e2.txt  TTR_fibril_pairs_list_c5.5_e3.txt  TTR_fibril_pairs_list_c6_e2.txt  TTR_fibril_pairs_list_c6_e3.txt  TTR_fibril_pairs_list_c6_e4.txt  TTR_merge_magros.txt  TTR_merge_pairs_list_c4.8_e2.txt  TTR_merge_pairs_list_c5.1_e2.txt  TTR_merge_pairs_list_c5.5_e2.txt  TTR_merge_pairs_list_c5.5_e3.txt  TTR_merge_pairs_list_c5.8_e2.txt  TTR_merge_pairs_list_c6_e2.txt  TTR_merge_pairs_list_c6_e3.txt  TTR_merge_pairs_list_c6_e4.txt  TTR_native_pairs_list_c4.8_e2.txt  TTR_native_pairs_list_c5.1_e2.txt  TTR_native_pairs_list_c5.5_e2.txt  TTR_native_pairs_list_c5.5_e3.txt  TTR_native_pairs_list_c5.8_e2.txt  TTR_native_pairs_list_c6_e2.txt  TTR_native_pairs_list_c6_e3.txt  TTR_native_pairs_list_c6_e4.txt
FF_greta_analysis_harp/: harp_fibril_pairs_list_c5.5_e3.txt  harp_merge_pairs_list_c5.5_e3.txt
Fibril_analysis/: 0_analysis_prepare.ipynb  13mM_analysis_greta5_ex1.ipynb  15_analysis_trajectory_matrix.ipynb  1_analysis_aggregation.ipynb  1_analysis_chain_label.ipynb  1_analysis_trajectory_matrix.ipynb  2_analysis_aggregation_plots.ipynb  Pairs_distance.ipynb  make_fibril_2000_13mM_300K_1  make_fibril_2000_13mM_304K_analysis_test  new_analysis.ipynb  pairs_analysis_greta.ipynb  pairs_analysis_greta_TTR_55_2.ipynb  pairs_analysis_greta_TTR_55_3.html  pairs_analysis_greta_TTR_55_3.ipynb  pairs_analysis_greta_TTR_58_2.ipynb  pairs_analysis_greta_TTR_6_2.ipynb  pairs_analysis_greta_magros.ipynb  pymol_pairs.py
GRETA/: atomtypes.atp  ffnonbonded.itp  topology_atoms
TTR_output_test/: ffnonbonded.itp  smog_to_gromos_dihedrals
amber-primefull.ff/: aminoacids.rtp  ffbonded.itp  forcefield.doc  new-angle-constant.txt  new-bond-constant.txt  topol_GRETA.top
analysis/: analysis-notebook.ipynb  analysis.R  analysis.py  gyration.ipynb  maxclust.ndx  maxclust.xvg  monomer_pairs_multicore.ipynb  monomer_pairs_multicore.py  nclust.xvg  new_monomer_analysis.ipynb  pairs  script-pdb.sh
analysis_bash_jupyter/: 13mM_analysis_greta5_ex1.ipynb  2000_pep-1mM.gro  avclust.xvg  bash-analysis-notebook.ipynb  colvar  csize.xpm  csizew.xpm  histo-clust.xvg  maxclust.ndx  maxclust.xvg  nclust.xvg  out.txt  pdb.ndx  pdb.ndx.old  prod_2000-1mM.tpr  prod_2000-1mM.xtc  script-clust.sh  script-cluster.sh  script-clustsize.sh  script-pdb.sh  script-pdb_Copia.sh  script-pdb_compare.sh  temp.xvg
charmm22star.ff/: ffnonbonded.itp
conda/: environment.yml  environment_macOS_M2.yml
fibril_ABeta/: atomnum  conf.gro  topol.top  topol_Protein_chain_A.itp  topol_Protein_chain_B.itp  topol_Protein_chain_C.itp  topol_Protein_chain_D.itp  topol_Protein_chain_E.itp  topol_Protein_chain_F.itp  topol_Protein_chain_G.itp  topol_Protein_chain_H.itp  topol_Protein_chain_I.itp  topol_Protein_chain_R.itp
fibril_ABeta_fake/: monomer_pairs_amber_ex2_co5.5.txt  topol.top
fibril_ALA_DP/: conf.gro
fibril_Amylin/: conf.gro  topol.top  topol_Protein_chain_B.itp  topol_Protein_chain_F.itp  topol_Protein_chain_G.itp  topol_Protein_chain_J.itp
fibril_Amylin_fibrillone_test/: conf.gro  posre_Protein_chain_P.itp  topol.top  topol_Protein_chain_C.itp  (+10 more)
src/: io.py  (+7 more)
tools/cmdata/: .gitignore  CMakeLists.txt  README.md  aa_sym  cmdata.cpp  cmdata.h  main.cpp  modules.cpp  patch_gromacs.sh  popt.patch  xdrfile.patch
tools/cmdata/src/cmdata/: cmdata.hpp  density.hpp  frame.hpp  function_types.hpp  indexing.hpp  io.hpp  mindist.hpp  molfile_support.hpp  parallel.hpp  pbc.hpp  resdata.hpp  resdata2.hpp  selection.hpp  xtc_frame.hpp
tools/cmdata/src/molfile/: Gromacs.h  crdplugin.cpp  endianswap.h  fastio.h  gromacsplugin.cpp  import.sh  largefiles.h  libmolfile_plugin.h  molfile_plugin.h  pdbplugin.cpp  periodic_table.h  readpdb.h  vmdplugin.h
tools/cmdata/test/: CMakeLists.txt  test_cmdata.cpp  test_partition.cpp
tools/cmdata/test/density/: test_kernel_density_function.cpp
tools/cmdata/test/io/: test_read_symmetry_indices.cpp  test_read_weights.cpp  test_symmetry_list_input.cpp
tools/cmdata/test/resources/: gp_sym  test_gp.tpr  weights_bad.txt  weights_good.txt
(+943 files in other folders)
